code/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-ingress
  namespace: code
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: webinterface
          port: 8443
          scheme: http
  tls:
    secretName: olympus-mangelschots-org-tls
